Add tmux key bindings and update irssi theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,33 @@
-unbind C-b
+unbind-key -a
+
 set -g prefix C-a
 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind-key          : command-prompt
+bind-key          ? list-keys
+bind-key          { swap-pane -U
+bind-key          } swap-pane -D
+
+bind-key -n M-Left  select-pane -L
+bind-key -n M-Right select-pane -R
+bind-key -n M-Up    select-pane -U
+bind-key -n M-Down  select-pane -D
+
+bind-key -n C-Left  resize-pane -L
+bind-key -n C-Right resize-pane -R
+bind-key -n C-Up    resize-pane -U
+bind-key -n C-Down  resize-pane -D
 
 set-option -g mouse-select-pane on
 
 # Window splitting
-unbind %
-unbind '"'
-bind / split-window -h
-bind - split-window -v
+bind-key -n -r M-/ split-window -h
+bind-key -n -r M-- split-window -v
 
 # Set status bar
-set -g status-bg green
-set -g status-fg black
+set -g status-bg black
+set -g status-fg white
+
+set -g status-attr bold
 
 set -g status-left ' #H'
 set -g status-right '%l:%M%P '
