bind d key to detach-client in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ bind-key          ? list-keys
 bind-key          { swap-pane -U
 bind-key          } swap-pane -D
 
+bind-key          d detach-client
+
 bind-key -n M-Left  select-pane -L
 bind-key -n M-Right select-pane -R
 bind-key -n M-Up    select-pane -U
