--- a/.irssi/config
+++ b/.irssi/config
@@ -215,7 +215,7 @@ settings = {
     autolog_path = "~/logs/irc/$tag/%Y/%m/%d/$0.log";
     autolog = "yes";
     autolog_level = "all -crap -clientcrap -msgs -ctcps";
-    completion_char = "$";
+    completion_char = ":";
     beep_msg_level = "MSGS NOTICES HILIGHT";
     bell_beeps = "yes";
     beep_when_window_active = "yes";
