--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,10 +9,11 @@ bind-key          } swap-pane -D
 
 bind-key          d detach-client
 
-bind-key -n M-Left  select-pane -L
-bind-key -n M-Right select-pane -R
-bind-key -n M-Up    select-pane -U
-bind-key -n M-Down  select-pane -D
+# -- The following override irssi's bindings
+# bind-key -n M-Left  select-pane -L
+# bind-key -n M-Right select-pane -R
+# bind-key -n M-Up    select-pane -U
+# bind-key -n M-Down  select-pane -D
 
 bind-key -n C-Left  resize-pane -L
 bind-key -n C-Right resize-pane -R
