Log private messages

--- a/.irssi/config
+++ b/.irssi/config
@@ -214,7 +214,7 @@ settings = {
     theme = "eboy";
     autolog_path = "~/logs/irc/$tag/%Y/%m/%d/$0.log";
     autolog = "yes";
-    autolog_level = "all -crap -clientcrap -msgs -ctcps";
+    autolog_level = "ALL -CRAP -CLIENTCRAP -CTCPS";
     completion_char = ":";
     beep_msg_level = "MSGS NOTICES HILIGHT";
     bell_beeps = "yes";
