--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,9 @@ set -g status-fg white
 
 set -g status-attr bold
 
-set -g status-left ' #H'
+set -g status-left ' #S'
+set -g status-left-length 32
+
 set -g status-right '%l:%M%P '
 set -g status-justify centre
 
