--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 unbind-key -a
-
 set -g prefix C-a
+
+# Reload configuration
+bind-key r confirm-before -p 'Reload configuration? (y/n)' "source ~/.tmux.conf; display-message 'Configuration reloaded.'"
 
 bind-key          : command-prompt
 bind-key          ? list-keys
@@ -15,12 +17,38 @@ bind-key          d detach-client
 # bind-key -n M-Up    select-pane -U
 # bind-key -n M-Down  select-pane -D
 
-bind-key -n C-Left  resize-pane -L
-bind-key -n C-Right resize-pane -R
-bind-key -n C-Up    resize-pane -U
-bind-key -n C-Down  resize-pane -D
+# Windows
+set-option -g allow-rename off
+
+bind-key -n C-N new-window
+bind-key -n C-Right next-window
+bind-key -n C-Left previous-window
+bind-key Enter command-prompt -I "#W" "rename-window '%%'"
+
+bind-key 0 select-window -t :0
+bind-key 1 select-window -t :1
+bind-key 2 select-window -t :2
+bind-key 3 select-window -t :3
+bind-key 4 select-window -t :4
+bind-key 5 select-window -t :5
+bind-key 6 select-window -t :6
+bind-key 7 select-window -t :7
+bind-key 8 select-window -t :8
+bind-key 9 select-window -t :9
+
+# Panes
+#bind-key -n C-Left  resize-pane -L
+#bind-key -n C-Right resize-pane -R
+#bind-key -n C-Up    resize-pane -U
+#bind-key -n C-Down  resize-pane -D
 
 set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+
+set-option -g pane-border-fg black
+set-option -g pane-border-bg black
+set-option -g pane-active-border-fg yellow
+set-option -g pane-active-border-bg yellow
 
 # Window splitting
 bind-key -n -r M-/ split-window -h
