tmux: remove esc delay

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 unbind-key -a
 set -g prefix C-a
+set -sg escape-time 0
 
 # Reload configuration
 bind-key r confirm-before -p 'Reload configuration? (y/n)' "source ~/.tmux.conf; display-message 'Configuration reloaded.'"
