Add DoxygenToolkit and add mouse support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,7 @@ bind-key          d detach-client
 
 # Windows
 set-option -g allow-rename off
+set-window-option -g mode-mouse on
 
 bind-key -n C-N new-window
 bind-key -n C-Right next-window
