--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,10 @@ bind-key          d detach-client
 # bind-key -n M-Right select-pane -R
 # bind-key -n M-Up    select-pane -U
 # bind-key -n M-Down  select-pane -D
+bind-key Left  select-pane -L
+bind-key Right select-pane -R
+bind-key Up    select-pane -U
+bind-key Down  select-pane -D
 
 # Windows
 set-option -g allow-rename off
