--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/thirdparty/vim-golang"]
 	path = .vim/thirdparty/vim-golang
 	url = https://github.com/jnwhiteh/vim-golang.git
+[submodule ".vim/bundle/Vundle.vim"]
+	path = .vim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim.git
