--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,19 @@ unbind-key -a
 set -g prefix C-a
 set -sg escape-time 0
 
+# Mouse
+set -g mouse on
+set -g mouse-utf8 on
+
+bind-key    -T root   MouseDown1Pane   select-pane -t = ; send-keys -M
+bind-key    -T root   MouseDown1Status select-window -t =
+bind-key    -T root   MouseDown3Pane   if-shell -F -t = "#{mouse_any_flag}" "select-pane -t=; send-keys -M" "select-pane -mt="
+bind-key    -T root   MouseDrag1Pane   if-shell -F -t = "#{mouse_any_flag}" "if -Ft= \"#{pane_in_mode}\" \"copy-mode -M\" \"send-keys -M\"" "copy-mode -M"
+bind-key    -T root   MouseDrag1Border resize-pane -M
+bind-key    -T root   WheelUpPane      if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= \"#{pane_in_mode}\" \"send-keys -M\" \"copy-mode -et=\""
+bind-key    -T root   WheelUpStatus    previous-window
+bind-key    -T root   WheelDownStatus  next-window
+
 # Reload configuration
 bind-key r confirm-before -p 'Reload configuration? (y/n)' "source ~/.tmux.conf; display-message 'Configuration reloaded.'"
 
@@ -12,45 +25,22 @@ bind-key          } swap-pane -D
 
 bind-key          d detach-client
 
-# -- The following override irssi's bindings
-# bind-key -n M-Left  select-pane -L
-# bind-key -n M-Right select-pane -R
-# bind-key -n M-Up    select-pane -U
-# bind-key -n M-Down  select-pane -D
-bind-key Left  select-pane -L
-bind-key Right select-pane -R
-bind-key Up    select-pane -U
-bind-key Down  select-pane -D
+bind-key    -T prefix M-1              select-layout even-horizontal
+bind-key    -T prefix M-2              select-layout even-vertical
+bind-key    -T prefix M-3              select-layout main-horizontal
+bind-key    -T prefix M-4              select-layout main-vertical
+bind-key    -T prefix M-5              select-layout tiled
+bind-key    -T root   `                next-layout
 
 # Windows
 set-option -g allow-rename off
-set-window-option -g mode-mouse on
 
 bind-key -n C-N new-window
 bind-key -n C-Right next-window
 bind-key -n C-Left previous-window
 bind-key Enter command-prompt -I "#W" "rename-window '%%'"
 
-bind-key 0 select-window -t :0
-bind-key 1 select-window -t :1
-bind-key 2 select-window -t :2
-bind-key 3 select-window -t :3
-bind-key 4 select-window -t :4
-bind-key 5 select-window -t :5
-bind-key 6 select-window -t :6
-bind-key 7 select-window -t :7
-bind-key 8 select-window -t :8
-bind-key 9 select-window -t :9
-
-# Panes
-#bind-key -n C-Left  resize-pane -L
-#bind-key -n C-Right resize-pane -R
-#bind-key -n C-Up    resize-pane -U
-#bind-key -n C-Down  resize-pane -D
-
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-
+# Appearance
 set-option -g pane-border-fg black
 set-option -g pane-border-bg black
 set-option -g pane-active-border-fg yellow
