git: update e-mail address

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Devin Samarin
-	email = eboyjr14@gmail.com
+	email = ~@dsamar.in
 	signingkey = 8E09708CE6D57B0B
 [color]
 	ui = auto
