--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -sg escape-time 0
 set -g mouse on
 set -g mouse-utf8 on
 
-bind-key    -T root   MouseDown1Pane   select-pane -t = ; send-keys -M
+bind-key    -T root   MouseDown1Pane   select-pane -t = \; send-keys -M
 bind-key    -T root   MouseDown1Status select-window -t =
 bind-key    -T root   MouseDown3Pane   if-shell -F -t = "#{mouse_any_flag}" "select-pane -t=; send-keys -M" "select-pane -mt="
 bind-key    -T root   MouseDrag1Pane   if-shell -F -t = "#{mouse_any_flag}" "if -Ft= \"#{pane_in_mode}\" \"copy-mode -M\" \"send-keys -M\"" "copy-mode -M"
@@ -25,12 +25,7 @@ bind-key          } swap-pane -D
 
 bind-key          d detach-client
 
-bind-key    -T prefix M-1              select-layout even-horizontal
-bind-key    -T prefix M-2              select-layout even-vertical
-bind-key    -T prefix M-3              select-layout main-horizontal
-bind-key    -T prefix M-4              select-layout main-vertical
-bind-key    -T prefix M-5              select-layout tiled
-bind-key    -T root   `                next-layout
+bind-key          Space                next-layout
 
 # Windows
 set-option -g allow-rename off
