Update git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,6 @@
 [user]
 	name = Devin Samarin
-	email = ~@dsamar.in
-	signingkey = 8E09708CE6D57B0B
+	email = me@dsamar.in
 [color]
 	ui = auto
 [push]
