tmux: rename-window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@ set-option -g allow-rename off
 bind-key -n C-N new-window
 bind-key -n C-Right next-window
 bind-key -n C-Left previous-window
-bind-key Enter command-prompt -I "#W" "rename-window '%%'"
+bind-key Enter command-prompt "rename-window '%%'"
 
 # Appearance
 set-option -g pane-border-fg black
