--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ unbind-key -a
 set -g prefix C-a
 set -sg escape-time 0
 
+set -g default-terminal "xterm-256color"
+
 # Mouse
 set -g mouse on
 set -g mouse-utf8 on
