tmux: Increase history-limit to 50000 lines

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -sg escape-time 0
 
 set -g default-terminal "xterm-256color"
 
+# Scrollback buffer (number of lines held in window history)
+set-option -g history-limit 50000
+
 # Mouse
 set -g mouse on
 
