--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -sg escape-time 0
 set -g default-terminal "xterm-256color"
 
 # Scrollback buffer (number of lines held in window history)
-set-option -g history-limit 50000
+set -g history-limit 50000
 
 # Mouse
 set -g mouse on
@@ -32,18 +32,12 @@ bind-key          d detach-client
 bind-key          Space                next-layout
 
 # Windows
-set-option -g allow-rename off
+set -g allow-rename off
 
 bind-key -n C-N new-window
 bind-key -n C-Right next-window
 bind-key -n C-Left previous-window
 bind-key Enter command-prompt "rename-window '%%'"
-
-# Appearance
-set-option -g pane-border-fg black
-set-option -g pane-border-bg black
-set-option -g pane-active-border-fg yellow
-set-option -g pane-active-border-bg yellow
 
 # Window splitting
 bind-key -n -r M-/ split-window -h
@@ -52,8 +46,6 @@ bind-key -n -r M-- split-window -v
 # Set status bar
 set -g status-bg black
 set -g status-fg white
-
-set -g status-attr bold
 
 set -g status-left ' #S'
 set -g status-left-length 32
