tmux: Use screen-256color as default terminal

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ unbind-key -a
 set -g prefix C-a
 set -sg escape-time 0
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Scrollback buffer (number of lines held in window history)
 set -g history-limit 50000
