--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,14 +39,15 @@ bind-key -n C-Right next-window
 bind-key -n C-Left previous-window
 bind-key Enter command-prompt "rename-window '%%'"
 
+# Appearance
+set -g pane-active-border-style "fg=cyan"
+set -g status-style "fg=black bg=white bold"
+
 # Window splitting
 bind-key -n -r M-/ split-window -h
 bind-key -n -r M-- split-window -v
 
-# Set status bar
-set -g status-bg black
-set -g status-fg white
-
+# Configure status bar
 set -g status-left ' #S'
 set -g status-left-length 32
 
