--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,17 +41,25 @@ bind-key Enter command-prompt "rename-window '%%'"
 
 # Appearance
 set -g pane-active-border-style "fg=cyan"
-set -g status-style "fg=black bg=white bold"
+set -g status-style "fg=black bg=white"
+set -g window-status-current-style "bg=terminal fg=terminal"
+set -g window-status-format " [#I] #W "
+set -g window-status-current-format "#{E:window-status-format}"
+set -g window-status-separator ""
+set -g message-command-style "bg=cyan fg=white"
+set -g message-style "bg=cyan fg=black"
 
 # Window splitting
 bind-key -n -r M-/ split-window -h
 bind-key -n -r M-- split-window -v
 
 # Configure status bar
-set -g status-left ' #S'
+set -g status-left '#[bg=cyan] #[fg=brightwhite,bold]#S#[fg=black]@#H '
 set -g status-left-length 32
 
-set -g status-right '%l:%M%P '
-set -g status-justify centre
+set -g status-right '%Y-%m-%d %I:%M%P '
+
+set -g status-position top
+set -g status-justify left
 
 set -g status-interval 15
