--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+# Version-specific commands
+# See: https://github.com/tmux/tmux/blob/master/CHANGES
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
+	sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
 unbind-key -a
 set -g prefix C-a
 set -sg escape-time 0
@@ -42,9 +47,13 @@ bind-key Enter command-prompt "rename-window '%%'"
 # Appearance
 set -g pane-active-border-style "fg=cyan"
 set -g status-style "fg=black bg=white"
-set -g window-status-current-style "bg=terminal fg=terminal"
+set -g window-status-current-style "bg=black fg=white"
+
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
+   "set -g window-status-current-style bg=terminal,fg=terminal"
+
 set -g window-status-format " [#I] #W "
-set -g window-status-current-format "#{E:window-status-format}"
+set -g window-status-current-format " [#I] #W "
 set -g window-status-separator ""
 set -g message-command-style "bg=cyan fg=white"
 set -g message-style "bg=cyan fg=black"
