tmux: Use shell string pipe

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ set -g pane-active-border-style "fg=cyan"
 set -g status-style "fg=black bg=white"
 set -g window-status-current-style "bg=black fg=white"
 
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
+if-shell -b '[ "$(bc <<< "$TMUX_VERSION >= 2.9")" = 1 ]' \
    "set -g window-status-current-style bg=terminal,fg=terminal"
 
 set -g window-status-format " [#I] #W "
