Remove micro, update tmux for new version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,14 +27,14 @@ bind-key    -T root   WheelDownStatus  next-window
 # Reload configuration
 bind-key r confirm-before -p 'Reload configuration? (y/n)' "source ~/.tmux.conf; display-message 'Configuration reloaded.'"
 
-bind-key          : command-prompt
-bind-key          ? list-keys
-bind-key          { swap-pane -U
-bind-key          } swap-pane -D
+bind-key : command-prompt
+bind-key ? list-keys
+bind-key \{ swap-pane -U
+bind-key \} swap-pane -D
 
-bind-key          d detach-client
+bind-key d detach-client
 
-bind-key          Space                next-layout
+bind-key Space next-layout
 
 # Windows
 set -g allow-rename off
